--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -26,23 +26,158 @@ body {
   background-color: #121421 !important;
 }
 
+.box-shadow {
+  -webkit-box-shadow: 0px 5px 15px 8px rgba(0, 0, 0, 0.05);
+          box-shadow: 0px 5px 15px 8px rgba(0, 0, 0, 0.05);
+}
+
 /*============================== 
         Home page style                                                                                                                                                                                                                                                                                                                                                                                                                                                    Style 
 ==============================*/
 .container--wrap {
   background: #252835;
+  width: 80%;
+  margin: 0 auto;
+  min-height: 100vh;
+}
+
+.header {
+  padding: 0.6rem;
 }
 
 .header-wrapper {
-  padding: 1rem;
+  padding: 1.2rem;
   border-radius: 5px;
-  -webkit-box-shadow: 0px 0px 10px #22242d;
-          box-shadow: 0px 0px 10px #22242d;
+  -webkit-box-shadow: 0px 0px 10px #050506;
+          box-shadow: 0px 0px 10px #050506;
   background: #171b35;
-  margin: 0.6rem;
 }
 
 .header-wrapper .logo {
-  width: 180px;
+  width: 135px;
+}
+
+.header-wrapper h2 {
+  font-weight: 300;
+  text-shadow: 0px 2px #314863;
+}
+
+.time-wrapper {
+  height: 75px;
+  width: 90%;
+  margin: 0 auto;
+}
+
+.time-wrapper .grey-bg {
+  background: #2d3249;
+  border-radius: 5px;
+  padding: 0.8rem;
+  text-align: center;
+}
+
+.time-wrapper .grey-bg span {
+  line-height: 2rem;
+  vertical-align: middle;
+  color: #fff;
+  font-size: 1.4rem;
+}
+
+.time-wrapper .grey-bg span:first-child {
+  color: #888ca4;
+  margin-right: 20px;
+  font-size: 1rem;
+  font-weight: 500;
+}
+
+.bandge-wrapper > div {
+  display: inline-block;
+  width: 50%;
+}
+
+.bandge-wrapper .badge-text {
+  color: #c1c0c0;
+  font-size: 0.8rem;
+  line-height: 35px;
+  vertical-align: super;
+  margin-left: 8px;
+}
+
+.round-badge {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background: #fff;
+  display: inline-block;
+  -webkit-box-shadow: 0px 0px 10px #050506;
+          box-shadow: 0px 0px 10px #050506;
+}
+
+.round-badge--green {
+  background: #55bc4f;
+}
+
+.round-badge--yellow {
+  background: #ffde34;
+}
+
+.round-badge--orange {
+  background: #f9b235;
+}
+
+.round-badge--red {
+  background: #f04636;
+}
+
+.card-analytic {
+  margin: 1.5rem 0;
+}
+
+.card-analytic .analytic-title {
+  padding: 15px 15px 5px;
+  background: #2b3042;
+}
+
+.card-analytic .analytic-title h5 {
+  font-size: 1rem;
+}
+
+.card-analytic .analytic-badge {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  background: #121c28;
+  padding: 0 5px;
+}
+
+.card-analytic .analytic-badge span {
+  text-align: center;
+  color: #fff;
+  display: block;
+  margin: 10px auto;
+  font-size: 0.8rem;
+}
+
+.card-analytic .analytic-badge span.round-badge {
+  margin-bottom: 0;
+}
+
+.card-analytic .analytic-badge span.round-badge--transparent {
+  background: transparent;
+  border: 1px solid;
+}
+
+.card-analytic .analytic-badge span.badge-text {
+  margin-top: 0px !important;
+  font-size: 0.7rem;
+  color: #646b7f;
+}
+
+.card-title h4 {
+  font-size: 1.2rem;
+  color: #868aa2;
+  border-bottom: 1px solid #888ca4;
+  padding-bottom: 14px;
 }
 /*# sourceMappingURL=style.css.map */
